--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,10 @@ version = "0.1.0"
 authors = ["Cirrus <cirrus.neptune@protonmail.com>"]
 edition = "2021"
 
+[dependencies.syn]
+version = "2.0.28"
+default-features = false
+features = ["parsing", "full", "visit"]
+
 [build-dependencies]
 serde_json = "1.0"
